--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.4"
+    "vue-router": "^4.2.4",
+    "vuetify": "^3.3.20"
   },
   "devDependencies": {
+    "@mdi/font": "^7.2.96",
     "@tsconfig/node18": "^18.2.2",
     "@types/node": "^18.17.17",
     "@vitejs/plugin-vue": "^4.3.4",
