--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,8 +20,7 @@ services:
       - NAME=apiserver
     networks:
       - network1
-    depends_on:
-      - mysql_db
+
 
   client:
     container_name: client
@@ -37,9 +36,7 @@ services:
       - NAME=client
     networks:
       - network1
-    depends_on:
-      - mysql_db
-      - apiserver
+
 
   nginx:
     image: nginx:alpine
@@ -52,10 +49,7 @@ services:
       - ./nginx.config:/etc/nginx/nginx.conf:ro
     networks:
       - network1
-    depends_on:
-      - mysql_db
-      - apiserver
-      - client
+
 
   phpmyadmin:
     container_name: phpmyadmin
@@ -66,8 +60,7 @@ services:
       - PMA_HOST=mysql_db
     networks:
       - network1
-    depends_on:
-      - mysql_db
+
 
   mysql_db:
     container_name: mysql_db
@@ -84,3 +77,7 @@ services:
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
     ports:
       - "9000:3306"
+    healthcheck:
+      test: [ "CMD", "mysqladmin", "ping", "-h", "localhost" ]
+      timeout: 10s
+      retries: 3
