--- a/client/package.json
+++ b/client/package.json
@@ -10,12 +10,14 @@
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false"
   },
   "dependencies": {
-    "@vuelidate/core": "^2.0.3",
-    "@vuelidate/validators": "^2.0.4",
+    "axios": "^1.5.1",
+    "mosha-vue-toastify": "^1.0.23",
     "pinia": "^2.1.6",
+    "vee-validate": "^4.11.8",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4",
-    "vuetify": "^3.3.20"
+    "vuetify": "^3.3.20",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@mdi/font": "^7.2.96",
