--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,21 @@ services:
     networks:
       - network1
 
+  emailservice:
+    container_name: emailservice
+    image: emailservice
+    build:
+      context: ./emailService
+      dockerfile: Dockerfile
+    ports:
+      - "5002:80"
+    extra_hosts:
+      - 'host.docker.internal:host-gateway'
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - NAME=emailservice
+    networks:
+      - network1
 
   client:
     container_name: client
