--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,8 +18,6 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - NAME=apiserver
-    volumes:
-         - /c/Users/Evgen/source/repos/SienceSiteProject/apiServer/Uploads:/app/Uploads
     networks:
       - network1
 
@@ -118,7 +116,7 @@ services:
       - MINIO_ROOT_USER=ROOTUSER
       - MINIO_ROOT_PASSWORD=CHANGEME123
     volumes:
-      - D:\data:/data
+      - ./data:/data
     command: server /data --console-address ":9090"
     networks:
       - network1
