--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,18 @@
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false"
   },
   "dependencies": {
-    "@vueup/vue-quill": "^1.0.0-beta.11",
+    "@ckeditor/ckeditor5-alignment": "^40.1.0",
+    "@ckeditor/ckeditor5-basic-styles": "^40.1.0",
+    "@ckeditor/ckeditor5-editor-classic": "^40.1.0",
+    "@ckeditor/ckeditor5-essentials": "^40.1.0",
+    "@ckeditor/ckeditor5-font": "^40.1.0",
+    "@ckeditor/ckeditor5-heading": "^40.1.0",
+    "@ckeditor/ckeditor5-html-support": "^40.1.0",
+    "@ckeditor/ckeditor5-link": "^40.1.0",
+    "@ckeditor/ckeditor5-paragraph": "^40.1.0",
+    "@ckeditor/ckeditor5-theme-lark": "^40.1.0",
+    "@ckeditor/ckeditor5-vue": "^5.1.0",
+    "@ckeditor/vite-plugin-ckeditor5": "^0.1.3",
     "axios": "^1.5.1",
     "mosha-vue-toastify": "^1.0.23",
     "pinia": "^2.1.6",
