--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "axios": "^1.5.1",
     "mosha-vue-toastify": "^1.0.23",
     "pinia": "^2.1.6",
+    "sass": "^1.69.5",
     "vee-validate": "^4.11.8",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4",
