--- a/client/package.json
+++ b/client/package.json
@@ -28,10 +28,12 @@
     "@ckeditor/ckeditor5-vue": "^5.1.0",
     "@ckeditor/vite-plugin-ckeditor5": "^0.1.3",
     "axios": "^1.5.1",
+    "moment": "^2.30.1",
     "mosha-vue-toastify": "^1.0.23",
     "pinia": "^2.1.6",
     "sass": "^1.69.5",
     "vee-validate": "^4.11.8",
+    "vite-plugin-vuetify": "^2.0.1",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4",
     "vuetify": "^3.3.20",
@@ -45,7 +47,7 @@
     "@vue/tsconfig": "^0.4.0",
     "npm-run-all2": "^6.0.6",
     "typescript": "~5.2.0",
-    "vite": "^4.4.9",
+    "vite": "^5.0.11",
     "vue-tsc": "^1.8.11"
   }
 }
