--- a/apiServer/appsettings.json
+++ b/apiServer/appsettings.json
@@ -8,6 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Db": "server=mysql_db;port=3306;database=arhivist;user=arch;password=g@o3LwoCtvHU_.SJ;"
+  },
+  "Jwt": {
+    "Secret": "Jwt:Secret",
+    "Issuer": "http://localhost:5000/",
+    "Audience": "http://localhost:5001"
   }
-
 }
