--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "mosha-vue-toastify": "^1.0.23",
     "pinia": "^2.1.6",
     "sass": "^1.69.5",
+    "sweetalert2": "^11.10.4",
     "vee-validate": "^4.11.8",
     "vite-plugin-vuetify": "^2.0.1",
     "vue": "^3.3.4",
