--- a/client/package.json
+++ b/client/package.json
@@ -13,17 +13,26 @@
     "@ckeditor/ckeditor5-alignment": "^40.1.0",
     "@ckeditor/ckeditor5-basic-styles": "^40.1.0",
     "@ckeditor/ckeditor5-block-quote": "^40.1.0",
+    "@ckeditor/ckeditor5-code-block": "^40.1.0",
     "@ckeditor/ckeditor5-editor-classic": "^40.1.0",
     "@ckeditor/ckeditor5-essentials": "^40.1.0",
+    "@ckeditor/ckeditor5-find-and-replace": "^40.1.0",
     "@ckeditor/ckeditor5-font": "^40.1.0",
     "@ckeditor/ckeditor5-heading": "^40.1.0",
-    "@ckeditor/ckeditor5-html-support": "^40.1.0",
+    "@ckeditor/ckeditor5-horizontal-line": "^40.1.0",
     "@ckeditor/ckeditor5-image": "^40.1.0",
+    "@ckeditor/ckeditor5-indent": "^40.1.0",
     "@ckeditor/ckeditor5-link": "^40.1.0",
     "@ckeditor/ckeditor5-list": "^40.1.0",
-    "@ckeditor/ckeditor5-paragraph": "^40.1.0",
-    "@ckeditor/ckeditor5-table": "^40.1.0",
     "@ckeditor/ckeditor5-theme-lark": "^40.1.0",
+    "@ckeditor/ckeditor5-paragraph": "^40.1.0",
+    "@ckeditor/ckeditor5-paste-from-office": "^40.1.0",
+    "@ckeditor/ckeditor5-remove-format": "^40.1.0",
+    "@ckeditor/ckeditor5-select-all": "^40.1.0",
+    "@ckeditor/ckeditor5-special-characters": "^40.1.0",
+    "@ckeditor/ckeditor5-table": "^40.1.0",
+    "@ckeditor/ckeditor5-typing": "^40.1.0",
+    "@ckeditor/ckeditor5-undo": "^40.1.0",
     "@ckeditor/ckeditor5-upload": "^40.1.0",
     "@ckeditor/ckeditor5-vue": "^5.1.0",
     "@ckeditor/vite-plugin-ckeditor5": "^0.1.3",
